gitops/apps/gott-calculator/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gott-calculator
  namespace: gott-calculator
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik
      namespace: gateway-system
  hostnames:
    - "gott-calculator.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gott-calculator
          port: 80
          weight: 1
