gitops/apps/gott-calculator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gott-calculator
  namespace: gott-calculator
spec:
  ingressClassName: traefik
  rules:
    - host: gott-calculator.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gott-calculator
                port:
                  number: 80
